--- a/app/views/spree/home/index.html.erb
+++ b/app/views/spree/home/index.html.erb
@@ -7,7 +7,7 @@
     <h1>
       Willkommen im Online-Shop von <a href="" target="_blank">Altmanndental!</a>
       <br>
-      Bei uns finden Sie <a href="/products">alles</a>, sowhol für Ihre <a href="t/praxis">Praxis</a> als auch Ihr <a href="t/labor">Labor</a>.
+      Bei uns finden Sie <a href="/products">alles</a>, sowohl für Ihre <a href="t/praxis">Praxis</a> als auch Ihr <a href="t/labor">Labor</a>.
     </h1>
   </div>
 </div>
